# solana-mobile-hackathon

./: .gitignore  README.md  dev-setup.md  setup.md
Loudness/: README.md  app.json  package.json
Loudness/constants/: app-config.tsx
blank/: App.js  package-lock.json  package.json
loudness/: README.md  app.json  package.json
loudness/constants/: app-config.tsx
panorama-parking/: README.md  app.json  index.js  package.json  polyfill.js
panorama-parking/app/(tabs)/: _layout.tsx
panorama-parking/components/demo/: demo-feature.tsx
panorama-parking/components/driver/: driver-feature.tsx
panorama-parking/components/drivers/: driver-confirm-arrival.tsx  driver-data-access.tsx  (+3 more)
panorama-parking/constants/: app-config.tsx
panorama-parking/utils/: debug-utils.ts
solana-mobile-dapp-examples/: README.md
solana-mobile-dapp-examples/FAQs/: README.md
solana-mobile-dapp-examples/first-mobile-dapp/: README.md  app.json  package.json
solana-mobile-dapp-examples/lazorkit-passkey-token-dapp/: App.tsx  README.md  app.json  package.json
solana-mobile-dapp-examples/metaplex-core-asset-nft-minter-dapp/: .env.example  .gitignore  README.md  app.json  package.json
solana-mobile-dapp-examples/metaplex-core-asset-nft-minter-dapp/solana-programs/metaplex_core_asset_nft_minter/programs/metaplex_core_asset_nft_minter/: Cargo.toml
solana-mobile-dapp-examples/metaplex-core-asset-nft-minter-dapp/solana-programs/metaplex_core_asset_nft_minter/programs/metaplex_core_asset_nft_minter/src/: lib.rs
solana-mobile-dapp-examples/onchain-counter-dapp/: app.json  package.json
(+38 files in other folders)
